[tool.poetry]
name = "noisy_rooms_reservation_system"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = "0.110.1"
uvicorn = "0.29.0"
sqlalchemy = "2.0.29"
ruff = "0.3.5"
mypy = "1.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
warn_return_any = false
pretty = true

ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
lint.select = ["E", "F", "I", "W", "A", "RET", "SIM", "PLC", "PLE", "PLR", "PLW", "RUF"]
lint.fixable = ["F", "E", "I", "W", "A", "RET", "SIM", "PLC", "PLE", "PLR", "PLW", "RUF"]
line-length = 120
extend-exclude = [".pytest_cache"]
show-fixes = true

[tool.ruff.lint.isort]
case-sensitive = true

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pycodestyle]
max-doc-length = 120

[tool.ruff.lint.flake8-annotations]
ignore-fully-untyped = false